[package]
name = "Condizionato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde = "1.0.136"
serde_derive = "1.0.136"
toml = "0.5.9"
serde_json = "1.0.79"
qstring = "0.7.2"
rand = "0.8.5"
